# sysworxx-io

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Cross.toml  README.CODESYS.md  README.md  cbindgen.toml  setup_rootfs.sh  ssh_runner.sh
.cargo/: config
Bindings/C/: Makefile  Makefile.target  demo.c
Bindings/CSharp/: build.sh
Bindings/CSharp/Ctr700Driver/: Ctr700.cs
Bindings/CSharp/Demo/: Demo.cs  Demo.csproj  Program.cs
Bindings/CSharp/Runlight/: Program.cs  Runlight.cs
Bindings/CSharp/SysworxxIo/: SysworxxIo.cs  SysworxxIo.csproj  SysworxxIoNative.cs
Bindings/CSharp/SysworxxIoCsbindgen/: Cargo.toml  build.rs
Bindings/CSharp/SysworxxIoCsbindgen/src/: lib.rs
Bindings/Codesys/: Cargo.toml
Bindings/Codesys/src/: connector.rs  generate_xml.rs  lib.rs  main.rs
Bindings/Codesys/systemd/: codesys-connector.service  codesys-generate-devdesc-xml.service
Bindings/Codesys/templates/: device_template_codesys.xml
Bindings/Java/: build.gradle
Bindings/Java/src/main/java/com/systec/: Ctr700Drv.java
Bindings/Java/src/main/java/demo/: Demo.java
Bindings/Python/: ctr700drv.py  demo.py  demo_counter.py  setup_py2.sh  setup_py3.sh
Bindings/Rust/: sysworxx_io.rs
Bindings/node-red-contrib-sysworxx-io/: .eslintrc  .gitignore  .npmignore  ReleaseNotes.md  package-lock.json  package.json  tsconfig.json
Bindings/node-red-contrib-sysworxx-io/src/nodes/: sysworxx_ai.html  sysworxx_ai.ts  sysworxx_ao.html  sysworxx_ao.ts  sysworxx_ci.html  sysworxx_ci.ts  sysworxx_di.html  sysworxx_di.ts  sysworxx_do.html  sysworxx_do.ts  sysworxx_err_led.html  sysworxx_err_led.ts  sysworxx_run_led.html  sysworxx_run_led.ts  sysworxx_run_switch.html  sysworxx_run_switch.ts  sysworxx_temp.html  sysworxx_temp.ts
Bindings/node-red-contrib-sysworxx-io/src/types/: interfaces.ts
Bindings/sysworxx-io-js/: .gitignore  .npmignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json
Bindings/sysworxx-io-js/src/: lib.rs
benches/: pair_vs_hash_map.rs
ctr700drv/: Cargo.toml  build.rs
ctr700drv/src/: ffi.rs  lib.rs
docker/: Dockerfile
examples/: demo.rs  demo_cnt.rs  demo_sysworxx.rs  demo_wdg.rs  iiotest.rs  periodic.rs  shared_mem.rs
include/: ctr700drv.h  sysworxx_io.h  sysworxx_io_conly.h
scripts/: gen_rtd_lut.py
src/: error.rs  ffi.rs  hw_rev.rs  labeled.rs  lib.rs  macros.rs  periodic.rs  shm.rs  signal.rs
src/convert/: mod.rs  rtd.rs  tc.rs  util.rs
src/definition/: ctr500.rs  ctr600.rs  ctr700.rs  ctr750.rs  ctr800.rs  fallback.rs  mod.rs  pi.rs
src/io/: am62x.rs  evdev.rs  iio.rs  imx.rs  led.rs  lookup.rs  mod.rs  null.rs  sensors.rs  shm.rs  sysfs.rs  util.rs  wdg_dev.rs
systemd/: iodaemon.service
