[package]
name = "ctr700drv"
version = "2.2.0"
authors = ["Daniel Krüger"]
edition = "2018"
description = "Deprecated I/O library for accessing basic peripherals (digital/analog I/O's, watchdog, etc) on sysWORXX CTR-700. Use sysworxx-io library for new projects instead."
license = "LGPL-3.0-or-later"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
lazy_static = "1.4.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
env_logger = "0.7.1"
sysworxx-io = { path = "../" }
