[package]
name = "sysworxx-io-js"
version = "2.2.1"
license = "LGPL-3.0-or-later"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
sysworxx-io = { path = "../.." }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-4", "channel-api"]
